add status icon

--- a/src/main/webapp/humanHealth/personInfoCard.zul
+++ b/src/main/webapp/humanHealth/personInfoCard.zul
@@ -5,8 +5,9 @@
 			<template name="children">
 
 				<zk xmlns="native" xmlns:z="zul">
-					<div class="person-info rounded col-12 #0093F9">
+					<div class="person-info rounded col-lg-2 #0093F9">
 						<div class="row">
+
 							<!-- Left icon -->
 							<div
 								class="col-4 text-left text-margin #0093F9">
@@ -14,12 +15,13 @@
 								<h6 class="text-white">
 									${each.bedRoom}
 								</h6>
-								<image
-									content="@load(each.totalStatus)@converter('org.itri.view.humanhealth.converter.StatusImageConverter')" />
+								<image id="totalStatusImg"
+									src="${each.totalStatus}" />
 							</div>
 
 							<!-- Right icon -->
 							<div class="col-8 px-1">
+
 								<!-- heartBeat -->
 								<div class="row">
 									<h6 class="text-danger">hr:</h6>
@@ -29,8 +31,8 @@
 									<h6 class="text-danger">bpm</h6>
 								</div>
 
+								<!-- spo2 -->
 								<div class="row">
-									<!-- spo2 -->
 									<h6 class="text-primary">SpO2:</h6>
 									<h3 class="text-primary">
 										${each.oximeter}
@@ -38,16 +40,15 @@
 									<h6 class="text-primary">%</h6>
 								</div>
 
-
+								<!-- breathRate -->
 								<div class="row">
-									<!-- breathRate -->
 									<h6 class="text-white">
 										Rr: ${each.breathRate} 次
 									</h6>
 								</div>
 
+								<!-- bodyTemperature -->
 								<div class="row">
-									<!-- bodyTemperature -->
 									<h6 class="text-success">
 										Temp: ${each.bodyTemperature} °C
 									</h6>
@@ -59,9 +60,9 @@
 
 			</template>
 		</vlayout>
-		<!-- 
-			<timer id="timer1234" delay="1000" running="true" repeats="true"
+
+		<timer id="timer1234" delay="1000" running="true" repeats="true"
 			onTimer="@command('refreshInfo')" />
-		-->
+
 	</nodom>
 </zk>
